# allocate-reviewers

./: .env_template  .gitignore  .pre-commit-config.yaml  LICENSE  MIGRATION_GUIDE.md  README.md  Reviewers.xlsx  SCHEDULED_ROTATION_GUIDE.md  WORKFLOWS_GUIDE.md  allocate_reviewers.py  check_rotation_needed.py  data_types.py  env_constants.py  example.xlsx  execute.sh  pyproject.toml  rotate_reviewers.py  utilities.py
.github/workflows/: README.md  all-review-rotations.yml  allocate-reviewers.yml  devs-review-rotation.yml  fe-devs-review-rotation.yml  multi-sheet-rotation.yml  rotate-team-reviewers.yml  run-all-rotations.yml  single-sheet-devs-rotation.yml  single-sheet-teams-rotation.yml  teams-review-rotation.yml  tests.yml
lib/: config_loader.py  data_types.py  env_constants.py  utilities.py
scripts/: check_rotation_needed.py  check_scheduled_rotation_needed.py  rotate_devs_reviewers.py  rotate_team_reviewers.py  run_multi_sheet_rotation.py
tests/: conftest.py  test_check_scheduled_rotation.py  test_config_default_usage.py  test_devs_rotation.py  test_reviewers_allocation.py  test_sheet_detection.py  test_sheet_operations.py  test_teams_rotation.py  utils.py
