[tool.poetry]
name = "allocate_reviewers"
version = "0.1.0"
description = ""
authors = ["1uy31"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
gspread = "^5.3.2"
oauth2client = "^4.1.3"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
