[tool.poetry]
name = "allocate_reviewers"
version = "0.2.0"
description = ""
authors = ["1uy31"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
gspread = "^5.3.2"
oauth2client = "^4.1.3"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
autoflake = "^2.0.2"
mypy = "^0.982"
pytest = "^7.1.3"
freezegun = "^1.2.2"
coverage = "^6.4.4"
refurb = "^1.5.0"
pre-commit = "^3.2.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autoflake]
check = true
imports = ["django", "requests", "urllib3"]
